--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "immediate-solutions/framework": "dev-master",
         "beberlei/DoctrineExtensions": "^1.0",
         "doctrine/migrations": "^1.4",
-        "doctrine/orm": "^2.5"
+        "doctrine/orm": "^2.5",
+        "symfony/finder": "^3.1"
     },
     "minimum-stability": "dev",
     "autoload": {
