--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "beberlei/DoctrineExtensions": "^1.0",
         "doctrine/migrations": "^1.4",
         "doctrine/orm": "^2.5",
-        "symfony/finder": "^3.1"
+        "symfony/finder": "^3.1",
+        "league/plates": "^3.1"
     },
     "minimum-stability": "dev",
     "autoload": {
